[package]
name = "cs16-tool-v2"
version = "2.0.0"
edition = "2021"
description = "CS 1.6 external memory tool — educational/research use only. No warranty."
authors = ["CS16 Project"]
license = "LicenseRef-cs16-non-commercial"
readme = "README.md"
rust-version = "1.82"
default-run = "cs16-tool"

[[bin]]
name = "cs16-tool"
path = "src/main.rs"

[[bin]]
name = "cs16-dump"
path = "src/bin/dump.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = 3
lto = true
strip = true
